[tool.poetry]
name = "streamlit-sortables"
version = "0.3.1"
description = "A Streamlit component to provide sortable list."
license = "Apache License (2.0)"
authors = ["ohtaman <ohtamans@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ohtaman/streamlit-sortables"
keywords = ["streamlit", "sortable", "list"]

# THIS IS THE KEY FIX
include = [
  "streamlit_sortables/frontend/build/**/*"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
